k8s/apps/miniflux/app.yaml
---
{
  apiVersion: "apps/v1",
  kind: "Deployment",
  metadata: {
    name: "app",
  },
  spec: {
    replicas: 1,
    template: {
      metadata: {
        labels: {
          app.kubernetes.io/component: "app",
        },
      },
      spec: {
        initContainers: [{
          name: "migrate",
          image: "miniflux",
          command: [
            "miniflux",
            "-migrate",
          ],
        }],
        containers: [{
          name: "app",
          image: "miniflux",
          ports: [{
            name: "http",
            containerPort: 8080,
          }],
          livenessProbe: {
            httpGet: {
              path: "/healthz",
              port: 8080,
            },
          },
          readinessProbe: {
            httpGet: {
              path: "/readyz",
              port: 8080,
            },
          },
        }],
      },
    },
  },
}
