k8s/apps/miniflux/svc.yaml
---
{
  apiVersion: "v1",
  kind: "Service",
  metadata: {
    name: "app",
  },
  spec: {
    ports: [{
      port: 80,
      targetPort: 8080,
    }],
    selector: {
      app.kubernetes.io/component: "app",
    },
  },
}
