k8s/apps/miniflux/ingress.yaml
---
{
  apiVersion: "networking.k8s.io/v1",
  kind: "Ingress",
  metadata: {
    name: "app",
    annotations: {
      tailscale.com/proxy-group: "ingress",
    },
  },
  spec: {
    ingressClassName: "tailscale",
    tls: [{
      hosts: [
        "miniflux",
      ],
    }],
    defaultBackend: {
      service: {
        name: "app",
        port: {
          number: 80,
        },
      },
    },
  },
}
